Fix spacing near changelog alert

--- a/docs/scss/docs/Docs.scss
+++ b/docs/scss/docs/Docs.scss
@@ -32,4 +32,8 @@
             border: $border;
         }
     }
+    
+    .code {
+        margin-bottom: 15px;
+    }
 }
